2011-07-07  Dan Bernstein  <mitz@apple.com>

        <rdar://problem/9737435> Re-enable -webkit-column-break-inside: avoid
        https://bugs.webkit.org/show_bug.cgi?id=64102

        Reviewed by Simon Fraser.

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::adjustForUnsplittableChild): Treat the child as unsplittable if
        '-webkit-column-break-inside: avoid' was specified.

2011-07-07  Andrey Kosyakov  <caseq@chromium.org>

        Web Inspector: visual regressions in network panel
        https://bugs.webkit.org/show_bug.cgi?id=64089

        Reviewed by Pavel Feldman.

        * inspector/front-end/networkPanel.css:
        (.data-grid.network-log-grid tr.filler td):
        (.network.panel .sidebar):

2011-07-07  Julien Chaffraix  <jchaffraix@webkit.org>

        Reviewed by David Hyatt.

        Partial layout when a flex-box has visibility: collapse
        https://bugs.webkit.org/show_bug.cgi?id=63776

        Tests: fast/flexbox/crash-button-input-autofocus.html
               fast/flexbox/crash-button-keygen.html
               fast/flexbox/crash-button-relayout.html

        The issue is that FlexBoxIterator would skip any child if it has visibility: collapsed.
        However if one of the child is anonymous, it may wrap some other child that would be skipped.
        Now FlexBoxIterator is called during the layout phase and thus some nodes would not relayouted
        as expected.

        * rendering/RenderDeprecatedFlexibleBox.cpp:
        (WebCore::FlexBoxIterator::next): When iterating, don't skip anonymous content as there may
        be real content hiding below.

2011-07-07  Vsevolod Vlasov  <vsevik@chromium.org>

        Web Inspector: URL links in styles open new tab instead of showing resources panel.
        https://bugs.webkit.org/show_bug.cgi?id=64090

        Reviewed by Pavel Feldman.

        * inspector/front-end/StylesSidebarPane.js: