@@ -1,3 +1,13 @@
+2011-07-07  Kyusun Kim  <maniagoon@company100.net>
+
+        The return value of SharedBuffer::createWithContentsOfFile must have valid m_size.
+        https://bugs.webkit.org/show_bug.cgi?id=63313
+
+        Reviewed by Eric Seidel.
+
+        * platform/posix/SharedBufferPOSIX.cpp:
+        (WebCore::SharedBuffer::createWithContentsOfFile):
+
 2011-07-07  Dan Bernstein  <mitz@apple.com>
 
         <rdar://problem/9737435> Re-enable -webkit-column-break-inside: avoid
